# speck-it

./: .gitignore  AGENTS.md  Cargo.toml  README.md
scripts/: install-service.sh  speak-it.service  start-daemon.sh
src/: lib.rs  main.rs
