[package]
name = "speak-it"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "json", "multipart", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "time"] }
uuid = { version = "1.18", features = ["v4"] }
which = "8.0"
x11rb = { version = "0.13", features = ["xinput", "xfixes"] }
nix = { version = "0.30", features = ["signal", "process"] }

[dev-dependencies]
filetime = "0.2"
